--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                                         <i class="ri-linkedin-box-fill text-indigo-700 mx-auto mt-2"></i>
                                     </a>
 
-                                    <!-- Twitter -->
+                                    <!-- Twitte -->
                                     <a href="#" class="flex rounded-full hover:bg-blue-50 h-10 w-10">
                                                                                 <i class="ri-twitter-fill text-blue-700 mx-auto mt-2"></i>
 
