--- a/index.html
+++ b/index.html
@@ -559,6 +559,48 @@
                                 </div>
                             </div>
                         </div>
+                    </div>                    <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+                        <div class="flex flex-col">
+                            <!-- Avatar -->
+                            <a href="#" class="mx-auto">
+                                <img class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                                    src="https://images.unsplash.com/photo-1634193295627-1cdddf751ebf?fit=clamp&w=400&h=400&q=80">
+                            </a>
+
+                            <!-- Details -->
+                            <div class="text-center mt-6">
+                                <!-- Name -->
+                                <h1 class="text-gray-900 text-xl font-bold mb-1">
+                                    Kenji Milton
+                                </h1>
+
+                                <!-- Title -->
+                                <div class="text-gray-700 font-light mb-2">
+                                    Team Memeber
+                                </div>
+
+                                <!-- Social Icons -->
+                                <div class="flex items-center justify-center opacity-50 hover:opacity-100
+                                transition-opacity duration-300">
+                                    <!-- Linkedin -->
+                                    <a href="#" class="flex rounded-full hover:bg-indigo-50 h-10 w-10">
+                                        <i class="ri-linkedin-box-fill text-indigo-700 mx-auto mt-2"></i>
+                                    </a>
+
+                                    <!-- Twitter -->
+                                    <a href="#" class="flex rounded-full hover:bg-blue-50 h-10 w-10">
+                                                                                <i class="ri-twitter-fill text-blue-700 mx-auto mt-2"></i>
+
+                                    </a>
+
+                                    <!-- Instagram -->
+                                    <a href="#" class="flex rounded-full hover:bg-orange-50 h-10 w-10">
+                                                                                                                      <i class="ri-facebook-circle-fill text-blue-700 mx-auto mt-2"></i>
+
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
                         <div class="flex flex-col">
@@ -631,7 +673,7 @@
                                         <i class="ri-linkedin-box-fill text-indigo-700 mx-auto mt-2"></i>
                                     </a>
 
-                                    <!-- Twitte -->
+                                    <!-- Twitter -->
                                     <a href="#" class="flex rounded-full hover:bg-blue-50 h-10 w-10">
                                                                                 <i class="ri-twitter-fill text-blue-700 mx-auto mt-2"></i>
 
